--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -212,7 +212,7 @@
               </div>
               <h5 class="text-lg font-semibold mt-4">Racking Plants</h5>
               <span>IDR 159.300</span>
-              <a href="" class="stretched-link">
+              <a href="#" class="stretched-link">
                 <!-- Fake Children -->
               </a>
             </div>
@@ -224,7 +224,7 @@
               </div>
               <h5 class="text-lg font-semibold mt-4">Cangkir Muttie</h5>
               <span>IDR 89.300</span>
-              <a href="" class="stretched-link">
+              <a href="#" class="stretched-link">
                 <!-- Fake Children -->
               </a>
             </div>
@@ -236,7 +236,7 @@
               </div>
               <h5 class="text-lg font-semibold mt-4">Bankyu Minimax</h5>
               <span>IDR 67.000.000</span>
-              <a href="" class="stretched-link">
+              <a href="#" class="stretched-link">
                 <!-- Fake Children -->
               </a>
             </div>
@@ -248,7 +248,7 @@
               </div>
               <h5 class="text-lg font-semibold mt-4">Buku Sidu Edition</h5>
               <span>IDR 12.000.000</span>
-              <a href="" class="stretched-link">
+              <a href="#" class="stretched-link">
                 <!-- Fake Children -->
               </a>
             </div>
